Add overlayarg option to \makebeamertitle

--- a/README
+++ b/README
@@ -69,6 +69,7 @@ instructions; also have a look at the example files.
 == CHANGES ==
 
 * V. 1.7 (forthcoming):  - Allow options in \makebeamerprogram also with blocksonly.
+                         - Add overlayarg option to \makebeamerprogram.
 
 * V. 1.6 (2018-09-26):   - Do not output session title-subtitle separator if there is no
                            subtitle.
