--- a/README
+++ b/README
@@ -68,7 +68,7 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.7 (forthcoming):  - Allow options in \makebeamerprogram also with blocksonly.
+* V. 1.7 (2018-12-14):   - Allow options in \makebeamerprogram also with blocksonly.
                          - Add overlayarg option to \makebeamerprogram.
                          - Add macros to receive session block titles (\sesblocktitle,
                            \SessionBlockTitle{<session no>} and \AdjSessionBlockTitle).
