--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -72,7 +72,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.7dev, 2018/12/01}
+\date{Version 1.7, 2018/12/14}
 
 \maketitle
 
@@ -1080,7 +1080,7 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item Forthcoming (v. 1.7):
+\item 2018/12/14 (v. 1.7):
 	\begin{itemize}
 		\item Allow \joption{options} in \jcsmacro{makebeamerprogram} also with \joption{blocksonly}.
 		\item Add \joption{overlayarg} option to \jcsmacro{makebeamerprogram}. See sec.~\ref{sec:csdata}.
