Add session block number macros

--- a/README
+++ b/README
@@ -68,6 +68,9 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V. 1.8 (forthcoming):  - Add macros to receive session block numbers (\sesblocknumber,
+                           \SessionBlockNumber{<session no>} and \AdjSessionBlockNumber).
+
 * V. 1.7 (2018-12-14):   - Allow options in \makebeamerprogram also with blocksonly.
                          - Add overlayarg option to \makebeamerprogram.
                          - Add macros to receive session block titles (\sesblocktitle,
