--- a/examples/English/metadata.tex
+++ b/examples/English/metadata.tex
@@ -13,7 +13,7 @@
 \LecUni{University of Narcissia}
 \LecInstitute{Department for the History of Science}
 \LecInstructor{Dr. Paula Pan}
-\LecStartDate{01/04/2015}
+\LecStartDate{2019-04-01}
 
 %
 % Session data
