--- a/examples/German/metadata.tex
+++ b/examples/German/metadata.tex
@@ -13,7 +13,7 @@
 \LecUni{Universit\"at Schwanheim}
 \LecInstitute{Institut f\"ur Wissenschaftsgeschichte}
 \LecInstructor{Dr. Paula Pan}
-\LecStartDate{01/04/2015}
+\LecStartDate{2019-04-01}
 
 %
 % Session data
