--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -229,7 +229,7 @@ Also cf. sec.~\ref{sec:styles}.
       it is possible to specify diverging rooms for individual sessions
       (see sec. \ref{sec:lecplan})
 \item [\joption{startdate=\jparam{startdate}}] The date of the first session (the argument
-      \emph{must} have the form DD/MM/YYYY); if no startdate is given,
+       must have the form YYYY-MM-DD or DD/MM/YYYY); if no startdate is given,
       \jfcsmacro{today} is used
 \item [\joption{interval=\jparam{interval}}] The interval (in days) between two sessions;
       the preset interval is 7 (=~weekly courses)
@@ -300,7 +300,7 @@ your university
 \item \jcsmacro{LecInstitute\{\jparam{institute}\}}: Record your institute's/department's name
 \item \jcsmacro{LecRoom\{\jparam{room}\}}: Record the room where the course (generally) takes place
 \item \jcsmacro{LecStartDate\{\jparam{startdate}\}}: Set the date of
-the first session (the argument \emph{must} have the form DD/MM/YYYY)
+       the first session (the argument must have the form YYYY-MM-DD or DD/MM/YYYY)
 \item \jcsmacro{LecInterval\{\jparam{interval}\}}: Adjust the interval (in days) between two sessions.
       The preset interval is 7 (=~weekly courses).
 \item \jcsmacro{SetAutoOffset\{\jparam{n}\}\{\jparam{days}\}}: Automatically shift all subsequent sessions
@@ -1087,6 +1087,8 @@ the \jslp\ style files. Thanks, Dominik.
 \begin{itemize}
 \item forthcoming (v. 1.8):
 	\begin{itemize}
+		\item Switch input format of \jcsmacro{LecStartDate} to ISO (YYYY-MM-DD). The old format
+		      (DD/MM/YYYY) is still supported for backwards compatibility.
 		\item Add macros to receive session block numbers (\jcsmacro{sesblocknumber},\\
 		\jcsmacro{SessionBlockNumber\{\jparam{session no}\}} and \jcsmacro{AdjSessionBlockNumber}).
 	\end{itemize}
